# intelli-trader

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  alembic.ini  pyproject.toml  requirements.txt  run_tests.py  setup.cfg  setup.py
.planning/: COVERAGE-INDEX.md  MILESTONES.md  PROJECT.md  REFACTOR-BRIEF.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json  v1.1-MILESTONE-AUDIT.md  v1.3-MILESTONE-AUDIT.md  v1.4-MILESTONE-AUDIT.md  v1.7-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE-REVIEW.md  ARCHITECTURE.md  CLEANUP-STANDARD.md  CONCERNS.md  CONVENTIONS.md  FIX-LIST.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md  V1.2-CLEANUP-REVIEW.md
.planning/debug/: 05.1-confb-2026-07-04.md  05.1-confb-2026-07-05.md  cr-01-fill-double-count.md  spot-long-only-oversell.md  wr-high-priority-live.md
.planning/milestones/: v1.0-ARCHITECTURE-REVIEW.md  v1.0-COVERAGE-INDEX.md  v1.0-MILESTONE-AUDIT.md  v1.0-REFACTOR-BRIEF.md  v1.0-REQUIREMENTS.md  v1.1-MILESTONE-AUDIT.md  v1.1-REQUIREMENTS.md  v1.2-MILESTONE-AUDIT.md  v1.2-REQUIREMENTS.md  v1.2-ROADMAP.md  v1.3-MILESTONE-AUDIT.md  v1.3-REQUIREMENTS.md  v1.4-MILESTONE-AUDIT.md  v1.4-REQUIREMENTS.md  v1.5-MILESTONE-AUDIT.md  v1.5-REQUIREMENTS.md  v1.5-ROADMAP.md  v1.6-MILESTONE-AUDIT.md  v1.6-REQUIREMENTS.md  v1.6-ROADMAP.md  v1.7-MILESTONE-AUDIT.md  v1.7-REQUIREMENTS.md  v1.7-ROADMAP.md
.planning/notes/: margin-leverage-shorts-999.4.md  persistence-milestone-design.md  strategy-authoring-surface-999.5c.md  v1.3-concerns-triage.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md  questions.md
.planning/spikes/: MANIFEST.md  PERF-BASELINE.md
.planning/todos/: live-backfill-through-update.md  native-tagged-multi-timeframe.md  pair-strategy-live-reconfiguration.md
data/: AAVEUSD_1d_ohlcv.csv  BTCUSD_1d_ohlcv_01_01_2021-04_06_2026.csv  BTCUSD_1d_ohlcv_2018_2026.csv  ETHUSD_1d_ohlcv.csv  SOLUSD_1d_ohlcv.csv
data/raw/: AAVEUSD_1d.csv  ETHUSD_1d.csv  SOLUSD_1d.csv
docs/: CACHE-CLASSIFICATION.md  config_system.md  webapp-design-prompt.md
docs/order_handler/: overview.md
docs/portfolio_handler/: metrics.md  overview.md  workflow_and_math.md
docs/tests/: README.md  trading_interface_refactoring.md
evals/: README.md  __init__.py
evals/results/: README.md
evals/runners/: __init__.py  run_w1_benchmark.py  run_w2_sweep.py
evals/strategies/: __init__.py  a_bracketed_momentum.py  b_limit_maker.py  c_pyramiding_trend.py  d_short_zscore.py
evals/tools/: __init__.py  fetch_binance_5m.py  validate_csv.py
evals/workloads/: synthetic.py  w1_topology.py
itrader/: __init__.py  config.py  legacy_config.py  logger.py  settings.py  version.py
itrader/compliance/: SqlCompliance.py  example.py
itrader/config/: __init__.py  credential_resolver.py  data.py  exchange.py  itrader_config.py  log.py  merge.py  models.py  okx_settings.py  order.py  portfolio.py  runtime.py  safety.py  settings.py  sql.py  strategy.py  stream.py  system.py  trading.py  universe.py
itrader/connectors/: __init__.py  base.py  okx.py  provider.py  stream_supervisor.py
itrader/core/: __init__.py  bar.py  clock.py  commission_estimator.py  constants.py  ids.py  instrument.py  money.py  policy_codec.py  portfolio_read_model.py  sizing.py
itrader/engine/: event_driven.py
itrader/events_handler/: bus.py  error_handler.py  error_policy.py  event.py  full_event_handler.py  screener_event_handler.py
itrader/execution_handler/: base.py  execution_handler.py  matching_engine.py  real_order.py  result_objects.py  simulated.py
itrader/instances/: event.py  orders.py  position.py
itrader/order_handler/: __init__.py  base.py  operation_result.py  order.py  order_base.py  order_handler.py  order_manager.py  order_validator.py  sizing_resolver.py
itrader/order_manager/: order_base.py  order_handler.py
itrader/outils/: data_outils.py  dict_merge.py  id_generator.py  price_parser.py  profiling.py  strategy.py  time_parser.py
itrader/portfolio_handler/: __init__.py  base.py  cash_manager.py  exceptions.py  metrics_manager.py  portfolio.py  portfolio_handler.py  position.py  position_handler.py  position_manager.py  transaction.py  transaction_manager.py  validators.py
itrader/price_handler/: BINANCE_Live.py  BINANCE_data_provider.py  CCXT_data_provider.py  OANDA_data_provider.py  __init__.py  base.py  config.py  data_provider.py  ingestion.py  oanda.cfg  sql_handler.py  yahoo_daily_csv_bar.py
itrader/reporting/: __init__.py  base.py  cash_operations.py  engine_logger.py  frames.py  metrics.py  orders.py  performance.py  plots.py  statistics.py  summary.py
itrader/results/: __init__.py  base.py  models.py  records.py  serializers.py  sql_storage.py
itrader/screeners/: BestScreener.py  Cointegrated_pairs.py
itrader/screeners_handler/: base.py  screeners_handler.py
itrader/statistics/: base.py  performance.py  reporting.py
itrader/storage/: __init__.py  backend.py  engine.py  halt_record_store.py  portfolio_definition_store.py  strategy_registry_store.py  system_stats_store.py  system_store.py  types.py  venue_account_store.py  venue_store.py
itrader/strategy/: BB_strategy.py  BB_strategy_2.py  SMA_MACD_strategy.py  SMA_MACD_strategy_NEW.py  SMA_strategy.py  base.py  empty_strategy.py  strategies_handler.py
itrader/strategy_handler/: SMA_MACD_strategy.py  SuperSmoothing_strategy.py  base.py  config.py  empty_strategy.py  managed_strategies.py  pair_base.py  primitives.py  signal_record.py  strategies_handler.py
itrader/telegram_bot/: app_wrapper.py  const.py  responses.py  telegram_bot.py
itrader/universe/: __init__.py  (+6 more)
migrations/: env.py
perf/: README.md  __init__.py
scripts/: cross_validate.py  cross_validate_accounting.py  cross_validate_limit.py  cross_validate_trailing.py  determinism_liquidation_double_run.py  diagnose_okx_creds.py  normalize_data.py  run_backtest.py  run_live_paper.py
test/: conftest.py  test_events.py  test_multiple_buy.py  test_multiple_sell.py  test_portfolio.py  test_position.py  test_transaction.py
tests/: README.md  conftest.py
(+2589 files in other folders)
