[tool.poetry]
name = "itrader"
version = "1.0.0"
description = "Event-driven trading system"
authors = ["tiziaco <tiziano.iaco@gmail.com>"]
readme = "README.md"
repository = "https://github.com/tiziaco/IntelliTrade.com"
packages = [{include = "itrader"}]

[tool.poetry.dependencies]
python = "^3.13"
pandas = "^2.3.3"
numpy = ">=2.2.3,<2.3"
scipy = "^1.17.1"
scikit-learn = "^1.9.0"
sqlalchemy = "^2.0.50"
ta = "^0.11.0"
pandas-ta = "0.4.71b0"
tqdm = "^4.67.3"
ccxt = "^4.5.56"
plotly = "^6.8.0"
sqlalchemy-utils = "^0.41.2"
statsmodels = "^0.14.6"
psycopg2-binary = "^2.9.12"
structlog = "^24.4.0"
pyyaml = "^6.0.3"
readerwriterlock = "^1.0.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-cov = "^5.0.0"
pytest-watch = "^4.2.0"
pytest-html = "^4.2.0"
ipython = "^9.14.0"
ipykernel = "^6.31.0"

[tool.pytest.ini_options]
# Test discovery
testpaths = ["test"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Output options
addopts = [
    "-ra",                    # Show short test summary info for all except passed
    "--strict-markers",       # Treat unregistered markers as errors
    "--strict-config",        # Treat configuration warnings as errors
    "--disable-warnings",     # Disable warnings in test output
    "-v",                     # Verbose output
]

# Test markers
markers = [
    "unit: Unit tests",
    "integration: Integration tests", 
    "slow: Slow running tests",
    "portfolio: Portfolio related tests",
    "events: Event handling tests",
    "orders: Order processing tests",
    "execution: Trade execution tests",
    "strategy: Strategy tests",
]

# Minimum version
minversion = "8.0"

# Filter warnings
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
