[tool.poetry]
name = "itrader"
version = "1.0.0"
description = "Event-driven trading system"
authors = ["tiziaco <tiziano.iaco@gmail.com>"]
readme = "README.md"
repository = "https://github.com/tiziaco/IntelliTrade.com"
packages = [{include = "itrader"}]

[tool.poetry.dependencies]
python = "^3.13"
pandas = "^2.3.3"
numpy = ">=2.2.3,<2.3"
scipy = "^1.17.1"
scikit-learn = "^1.9.0"
sqlalchemy = "^2.0.50"
ta = "^0.11.0"
pandas-ta = "0.4.71b0"
tqdm = "^4.67.3"
ccxt = "^4.5.56"
plotly = "^6.8.0"
sqlalchemy-utils = "^0.41.2"
statsmodels = "^0.14.6"
psycopg2-binary = "^2.9.12"
structlog = "^24.4.0"
pyyaml = "^6.0.3"
uuid-utils = "^0.16.0"
pydantic = "^2.13"
pydantic-settings = "^2.14"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-cov = "^5.0.0"
pytest-watch = "^4.2.0"
pytest-html = "^4.2.0"
ipython = "^9.14.0"
ipykernel = "^6.31.0"
mypy = "^2.1.0"

[tool.pytest.ini_options]
# Test discovery
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Output options
addopts = [
    "-ra",                    # Show short test summary info for all except passed
    "--strict-markers",       # Treat unregistered markers as errors
    "--strict-config",        # Treat configuration warnings as errors
    "--disable-warnings",     # Disable warnings in test output
    "-v",                     # Verbose output
]

# Test markers — TYPE axis (D-13). Folder-derived in tests/conftest.py
# (tests/unit -> unit; tests/integration -> integration + slow). This is the SINGLE
# marker-registration home; conftest only applies, never registers (--strict-markers).
markers = [
    "unit: Unit test — drives ONE collaborating component (tests/unit/)",
    "integration: Integration test — asserts cross-component interaction (tests/integration/)",
    "slow: Slow running test (the full-engine integration runs)",
]

# Minimum version
minversion = "8.0"

# Filter warnings
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]

[tool.mypy]
python_version = "3.13"
strict = true
files = ["itrader"]

# Deferred subsystems (D-05): out of M2a scope — strict-clean lands with the
# milestone that owns each. ignore_errors keeps the gate green for in-scope code
# while these remain un-typed. Each module is tagged with its deferral category.
[[tool.mypy.overrides]]
module = [
    "itrader.trading_system.live_trading_system",        # D-live
    "itrader.trading_system.trading_interface",          # D-live
    "itrader.price_handler.store.sql_store",             # D-sql
    "itrader.price_handler.providers.ccxt_provider",     # D-oanda
    "itrader.price_handler.providers.oanda_provider",    # D-oanda
    "itrader.price_handler.providers.exchange_base",     # D-oanda — legacy provider ABC the adapters import
    "itrader.price_handler.providers.binance_stream",    # D-live
    "itrader.screeners_handler.*",                       # D-screener
    "itrader.events_handler.screener_event_handler",     # D-screener — dead, superseded by full_event_handler;
                                                         #   references self.universe never set in __init__ (latent
                                                         #   AttributeError). Not imported anywhere. Wiring is D-screener.
]
ignore_errors = true

# Out-of-scope debt deferred by the Plan 02-07 owner decision (Option 2 — scope
# down + documented overrides). These modules are NOT part of the D-05 M2a
# in-scope set; their strict-clean lands with the milestone that owns each.
# Each is documented + time-boxed — debt is deferred, NOT silently suppressed
# across the in-scope backtest path.
[[tool.mypy.overrides]]
module = [
    "itrader.strategy_handler.my_strategies.*",          # OUT — relocated to a separate repo (STATE.md)
    "itrader.order_handler.storage.postgresql_storage", # D-sql — live order persistence (sibling of sql_handler)
]
ignore_errors = true

# Third-party libs that ship no type stubs (no py.typed marker / stubs uninstalled).
# ignore_missing_imports avoids hundreds of cascading import-untyped errors across
# the in-scope package without masking our own type debt.
[[tool.mypy.overrides]]
module = [
    "ta.*", "pandas_ta.*", "ccxt.*",
    "pandas.*", "pytz.*", "tqdm.*", "yaml.*",
    "scipy.*", "plotly.*", "sklearn.*", "statsmodels.*",
]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
